Add variant styles, improve typography
- Make all grid-based Sass values more concise
- Move Sass path into variable

--- a/app/styles/blocks/content.scss
+++ b/app/styles/blocks/content.scss
@@ -4,8 +4,8 @@
 }
 
 .content_loading {
-  @include spinner($grid, border-color $alpha-color);
-  margin: $grid;
+  @include spinner($g, border-color $alpha-color);
+  margin: $g;
 }
 
 .content_lanes {
