--- a/app/styles/mixins/font.scss
+++ b/app/styles/mixins/font.scss
@@ -1,7 +1,7 @@
 @mixin font($type: null) {
   @if $type == highlight {
     color: $text-color-light;
-    font-family: $font-family-secondary;
     font-size: $font-size-small;
+    font-weight: bold;
   }
 }
