Display variants at correct position
Adjust vertical offset of variants to match the position of their references.
Draw an SVG path from reference to variant and add hover and click handlers to
highlight matching pairs.

- Add rows to Solr query to make sure we get all variants (limited to 10 otherwise)
- Redraw variants on window resize or when sidebar opens
- Determine variant type from ID (this feels hacky and should be changed)
- Do not add prefix to letter classes anymore, use child elements for styling instead
- Introduce promise to wait for MathJax
- Add distict blocks for lane types

Styles:
- Add basic form styles
- Add styles for edition-specific markup
- Add a switch to type-scale mixin to allow half-line steps
- Re-order all SCSS properties

Resolves: ADWD-1823

--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -24,7 +24,6 @@
 @import 'blocks/content';
 @import 'blocks/header';
 @import 'blocks/lane';
-@import 'blocks/letter';
 @import 'blocks/main';
 @import 'blocks/metadata';
 @import 'blocks/nav';
@@ -32,4 +31,6 @@
 @import 'blocks/sidebar';
 @import 'blocks/sr-only';
 @import 'blocks/top-bar';
+@import 'blocks/transcript';
 @import 'blocks/variant';
+@import 'blocks/variants';
