--- a/app/templates/nav.hbs
+++ b/app/templates/nav.hbs
@@ -4,8 +4,8 @@
   <h2 class="nav_heading">{{t 'leibnizLetters'}}</h2>
 
   <form class="nav_search" action="http://rep.adw-goe.de/handle/11858/00-001S-0000-0006-AB16-C/discover" method="post">
-    <input name="search" class="nav_input" placeholder="{{t 'search'}}">
-    <input type="submit" value="{{t 'search'}}">
+    <input type="text" name="search" class="nav_input" placeholder="{{t 'search'}}">
+    <button type="submit"><div class="sr-only">{{t 'search'}}</div></button>
   </form>
 
   <h3 class="nav_subheading">{{t 'browse'}}</h3>
