--- a/app/styles/mixins/drop-shadow.scss
+++ b/app/styles/mixins/drop-shadow.scss
@@ -1,5 +1,5 @@
 $shadow-size: 25px !default;
-$shadow-color: rgba(#000, .2) !default;
+$shadow-color: rgba(black, .2) !default;
 
 @mixin drop-shadow {
   box-shadow: 0 0 $shadow-size $shadow-color;
