--- a/app/styles/util/settings.scss
+++ b/app/styles/util/settings.scss
@@ -3,9 +3,11 @@ $alpha-color: #c90230;
 $black: #000;
 $white: #fff;
 $shade: rgba($black, .06);
+$shade-dark: rgba($black, .6);
 
 // Named colors
 $border-color: #ccc;
+$border-color-dark: #aaa;
 $link-color: $alpha-color;
 $link-hover-color: shade($link-color, 30);
 $popup-bg-color: $white;
@@ -20,8 +22,9 @@ $font-family: Georgia, serif;
 $font-size: 16px;
 $font-size-small: 14px;
 $g: 28px; // base grid
-$u: $g / 1px; // strip unit
+$u: ($g / 1px); // strip unit
 $border-width: 1px;
+$border-width-bold: 3px;
 $border-style: solid;
 $line-height: $g;
 $nav-width: (10 * $g);
@@ -33,11 +36,11 @@ $img-path: '../img/';
 // Others
 $noise: url($img-path + 'noise.png');
 
-$buttonSvgPath: 'M0,#{$u/2+.5}
-  c#{$u/2},.5,#{$u/2},#{-$u/2},#{$u},#{-$u/2}
-  l#{5*$u},0
-  c#{$u/2},0,#{$u/2},#{$u/2},#{$u},#{$u/2}
-  c#{-$u/2},0,#{-$u/2},#{$u/2},#{-$u},#{$u/2}
-  l#{-5*$u},0
-  c#{-$u/2},0,#{-$u/2},#{-$u/2},#{-$u},#{-$u/2}
-  Z';
+$buttonSvgPath: "M0, #{$u / 2 + .5}\
+  c#{$u / 2}, .5,#{$u / 2}, #{-$u / 2}, #{$u}, #{-$u / 2}\
+  l#{5 * $u}, 0\
+  c#{$u / 2}, 0, #{$u / 2},#{$u / 2}, #{$u}, #{$u / 2}\
+  c#{-$u / 2}, 0, #{-$u / 2}, #{$u / 2}, #{-$u}, #{$u / 2}\
+  l#{-5 * $u}, 0\
+  c#{-$u / 2}, 0, #{-$u / 2}, #{-$u / 2}, #{-$u}, #{-$u / 2}\
+  Z";
