Convert image references into SVGs
Search for image references in transcript, load SVG from Solr and display
inline vector images.

- Apply class to SVG overlay for connectors
- Fix comment typo
- Remove console.dir that managed to slip through (whoops!)

TODO: Add tests

Resolves: ADWD-1934

--- a/app/templates/components/letter-header.hbs
+++ b/app/templates/components/letter-header.hbs
@@ -66,7 +66,7 @@
               <a href="{{content.brief_url}}" target="_blank">Leibniz, Gottfried Wilhelm: Sämtliche Schriften und Briefe</a>
             </h2>
             <p>Hrsg. v. Berlin-Brandenburgischen Akademie der Wissenschaften / Akademie der Wissenschaften zu Göttingen</p>
-            <h3 class="popup_pre-heading">{{t 'permaLink'}}</h3>
+            <h3 class="popup_sub-heading">{{t 'permaLink'}}</h3>
             <input class="popup_input" type="url" value="{{content.brief_url}}">
           {{/pop-up}}
         </div>
