--- a/app/styles/blocks/content.scss
+++ b/app/styles/blocks/content.scss
@@ -3,11 +3,6 @@
   position: relative;
   width: 100%;
 
-  svg {
-    pointer-events: none; // TODO: Find a way to ignore pointer events in IE<10
-    position: absolute;
-    top: 0;
-  }
 }
 
 .content_loading {
@@ -23,4 +18,10 @@
     @include transition(opacity);
     opacity: 1;
   }
+}
+
+.content_svg-overlay {
+  pointer-events: none; // TODO: Find a way to ignore pointer events in IE<10
+  position: absolute;
+  top: 0;
 }
