Add all letter languages to translation
Resolves: ADWD-1955

--- a/app/templates/components/letter-metadata.hbs
+++ b/app/templates/components/letter-metadata.hbs
@@ -21,7 +21,7 @@
       {{t 'languages'}}
     {{/if}}
   </h3>
-  <p>{{#each content.sprache as |sprache index|}}{{if index ', '}}{{t (concat 'language' (ucFirst sprache))}}{{/each}}</p>
+  <p>{{#each content.sprache as |sprache index|}}{{if index ', '}}{{t (concat 'languageName.' sprache)}}{{/each}}</p>
 
   {{yield}}
 </aside>
