--- a/app/templates/components/letter-metadata.hbs
+++ b/app/templates/components/letter-metadata.hbs
@@ -1,4 +1,6 @@
 <aside class="metadata">
+  <h2 class="metadata_heading">{{t 'metadata'}}</h2>
+
   <h3>{{t 'context'}}</h3>
   <p>{{{content.kontext}}}</p>
 
