--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -4,12 +4,16 @@
 @import 'bower_components/spinners/stylesheets/spinners';
 @import 'vendor/entypo-plus';
 
+@import 'util/functions';
+@import 'util/settings';
+
 @import 'mixins/after';
 @import 'mixins/border';
 @import 'mixins/button';
 @import 'mixins/clearfix';
 @import 'mixins/drop-shadow';
 @import 'mixins/font';
+@import 'mixins/header-button';
 @import 'mixins/hover';
 @import 'mixins/icon';
 @import 'mixins/link-border-on-hover';
@@ -17,10 +21,11 @@
 @import 'mixins/transition';
 @import 'mixins/typo-scale';
 
-@import 'util/functions';
-@import 'util/settings';
+@import 'extends/header-aside';
+
 @import 'util/base';
 
+@import 'blocks/citation';
 @import 'blocks/content';
 @import 'blocks/header';
 @import 'blocks/lane';
