--- a/app/styles/blocks/nav.scss
+++ b/app/styles/blocks/nav.scss
@@ -14,6 +14,10 @@
   }
 }
 
+.nav_heading {
+  @include typo-scale(2);
+}
+
 .nav_subheading {
   @include typo-scale(1);
   margin-bottom: ($g / 2);
