--- a/app/styles/app.scss
+++ b/app/styles/app.scss
@@ -36,6 +36,7 @@
 @import 'blocks/nav';
 @import 'blocks/pop-up';
 @import 'blocks/sidebar';
+@import 'blocks/symbols';
 @import 'blocks/top-bar';
 @import 'blocks/transcript';
 @import 'blocks/variant';
