Change drag handle: use link hover color only for center line
Slightly increase height

Related to: ADWD-1965

--- a/app/styles/blocks/drag-handle.scss
+++ b/app/styles/blocks/drag-handle.scss
@@ -1,4 +1,4 @@
-$drag-handle-height: 3 * $u !default; // no unit
+$drag-handle-height: 3.5 * $u !default; // no unit
 
 .drag-handle {
   cursor: ew-resize;
@@ -10,22 +10,25 @@ $drag-handle-height: 3 * $u !default; // no unit
   width: ($g / 2 + 2 * $border-width);
   z-index: 1;
 
-  $buttonSvgPath: "M#{$u / 4 + .5}, 0\
+  $buttonSvgOutline: "M#{$u / 4 + .5}, 0\
     c0, #{$u / 4}, #{$u / 4}, #{$u / 4}, #{$u / 4}, #{$u / 2}\
     l0, #{$drag-handle-height - 2 * $u / 2}\
     c0, #{$u / 4}, #{-$u / 4}, #{$u / 4}, #{-$u / 4}, #{$u / 2}\
     c0, #{-$u / 4}, #{-$u / 4}, #{-$u / 4}, #{-$u / 4}, #{-$u / 2}\
     l0, #{-$drag-handle-height + 2 * $u / 2}\
     c0, #{-$u / 4}, #{$u / 4}, #{-$u / 4}, #{$u / 4}, #{-$u / 2}\
-    Z
-    M#{$u / 4 + .5}, #{$u / 2}
+    Z";
+
+  $buttonSvgLine: "M#{$u / 4 + .5}, #{$u / 2}\
     l0, #{$drag-handle-height - $u}";
+
 
   @include hover {
     background: svg(
       $g / 2 + 2 * $border-width,
       999px,
-      "<path d='#{$buttonSvgPath}' stroke='#{color-to-string($border-color)}' style='stroke-width: #{$border-width}' fill='#{color-to-string($link-hover-color)}'/>"
+      "<path d='#{$buttonSvgOutline}' stroke='#{color-to-string($border-color)}' style='stroke-width: #{$border-width}' fill='#{color-to-string($highlight-color)}'/>\
+      <path d='#{$buttonSvgLine}' stroke='#{color-to-string($link-hover-color)}' style='stroke-width: #{$border-width}' />"
     ) center center no-repeat;
   }
 
